--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 /HW2-exploration.html
 /HW2-exploration_files/
+/HW3-drafting-viz.html
+/BVersteeg-HW3-drafting-viz.html
+/BVersteeg-HW3-drafting-viz_files/
+/HW3-drafting-viz_files/
 /Part2.html
 /Part2_files/
 /data
